# medit

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md
cmake/: FetchSDL3.cmake  FetchSDL3_ttf.cmake  FindPackageOrFetchSDL3.cmake  FindPackageOrFetchSDL3_ttf.cmake  FindPackageOrFetchutf8proc.cmake  MinGW.cmake  zig.cmake
cmake/FindPackageOrFetch/: SDL3.cmake  SDL3_ttf.cmake
cmake/Modules/: CheckAddressSanitizerSupported.cmake
cmake/Toolchains/: LLVM-MinGW-UCRT.cmake
cmake/zig/: README.md
cmake/zig/cmake/: zig-toolchain.cmake
scripts/: README.md  build-common-setup.sh  build-linux  build-llvm-mingw-ucrt  build-mingw  build-native  build.sh  perf.sh  setup.sh  wget
scripts/linux/: build.sh  setup.sh
scripts/mingw/: build.sh  setup.sh
src/: assert.h  color.h  dynarray.h  keybind.c  keybind.h  keybind_sdl3.c  keybind_sdl3.h  keymap.c  keymap.h  linalg.h  main.c  meditor.c  meditor.h  renderer.c  renderer.h  renderer_sdl.c  renderer_sdl.h  renderer_sdl3.c  renderer_sdl3.h  safeint.h  types.h  ui.h  ui_sdl.h  unicode.c  unicode.h  utf8.h  utils.c  utils.h
src/platform/ansi-terminal/: ansi_term.h  renderer_ansi_term.c
src/platform/sdl3/: renderer_sdl3.c  sdl3.h
src/ui/ansi/: ansi.h
src/ui/sdl3/: font.c  font.h  keybind_sdl3.c  perf_counter.c  perf_counter.h  sdl3.c  sdl3.h  sdl3_utils.h  utils.h
test/: dynarray.c  layout.c  unicode.c
